Fix article title underline to align with text width not container

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ a:hover {
   line-height: 1.2;
   color: #333;
   margin: 0 0 0.25em;
+  width: fit-content;
 }
 
 .article-list h3::after {
